[package]
name = "crust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"
numpy = "0.16.2"
rand = "0.8"
rand_pcg = "0.3"
rand_distr = "0.4.3"
indexmap = "1.8.2"
ahash = "0.7.6"
num-complex = "0.4"

[dependencies.pyo3]
version = "0.16.5"
features = ["extension-module", "hashbrown", "num-complex"]
